# pytheas

./: .gitignore  README.md  environment.yml  pyproject.toml
doc/: README.md  _sec1_introduction.md  _sec2_coordinates.md  _sec3_normal_gravity.md  _sec4_lunar_ephemeris.md  _sec5_solar_ephemeris.md  _sec6_tidal_acceleration.md  _sec7_elastic_response.md  _sec8_gr_tidal.md  _sec8_gr_tidal_verified_extreme.md  implementation.md  measuring-g-notes.tex  rebuttal_solar_gravity.md  rebuttal_solar_gravity.tex  theory.md  tutorial.md
doc/archive/: _sec2_coordinates.md  _sec4_lunar_ephemeris.md  _sec5_solar_ephemeris.md  _sec6_tidal_acceleration.md  _sec8_gr_tidal.md  _sec9_lab_frame.md
doc/figures/: fig01_g_timeseries.py  fig02_reference_frames.py  fig03_measurement_axis.py  fig04_gravity_vs_latitude.py  fig05_free_air.py  fig06_lunar_distance_tides.py  fig07_perturbation_terms.py  fig08_moon_vs_sun.py  fig09_tidal_schematic.py  fig10_exact_vs_approx.py  fig11_rigid_vs_elastic.py  fig12_anatomy.py  fig13_error_budget.py  fig14_gr_corrections.py  fig15_lab_frame_hierarchy.py  orientation_sweep.py  setup_schematic.py  style.py
docs/plans/: 2026-02-17-chapter9-lab-frame-gr-design.md  roadmap.md
pytheas/: __init__.py  __main__.py  _core.py
tests/: test_pytheas.py
verification/: ws1_ephemeris.py  ws2_normal_gravity.py  ws3_tidal_spectral.py  ws4_coordinates.py  ws5_gradient_formula.py  ws6_edge_cases.py
