[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pytheas"
version = "3.1.0"
description = "Gravitational acceleration g(t) at a point on Earth"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
test = ["pytest>=7.0", "matplotlib>=3.5"]

[project.scripts]
pytheas = "pytheas.__main__:main"

[tool.setuptools.packages.find]
include = ["pytheas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
